--- a/Debug/makefile
+++ b/Debug/makefile
@@ -11,6 +11,8 @@ RM := rm -rf
 -include sources.mk
 -include Drivers/STM32C0xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
+-include Core/Src/Middleware/subdir.mk
+-include Core/Src/BoardSupport/subdir.mk
 -include Core/Src/subdir.mk
 -include objects.mk
 
