--- a/Debug/makefile
+++ b/Debug/makefile
@@ -63,8 +63,8 @@ all: main-build
 main-build: reynolds-switch.elf secondary-outputs
 
 # Tool invocations
-reynolds-switch.elf reynolds-switch.map: $(OBJS) $(USER_OBJS) C:\Users\Eduardo\STM32CubeIDE\workspace_reynolds\reynolds-switch\STM32C011F6UX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "reynolds-switch.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m0plus -T"C:\Users\Eduardo\STM32CubeIDE\workspace_reynolds\reynolds-switch\STM32C011F6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="reynolds-switch.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+reynolds-switch.elf reynolds-switch.map: $(OBJS) $(USER_OBJS) C:\Users\Eduardo\STM32CubeIDE\workspace_ch_raynolds\reynolds-switch\STM32C011F6UX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "reynolds-switch.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m0plus -T"C:\Users\Eduardo\STM32CubeIDE\workspace_ch_raynolds\reynolds-switch\STM32C011F6UX_FLASH.ld" --specs=nosys.specs -Wl,-Map="reynolds-switch.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
